# job_hunting_ai

./: readme.md
microservices/auth/: .gitignore  docker-compose.yaml
microservices/auth/api/: .gitignore  Dockerfile  Dockerfile.worker  docker-compose.yaml  pyproject.toml  ruff.toml
microservices/auth/api/alembic/: env.py
microservices/auth/api/alembic/versions/: 32b6dbc34472_create_user_table.py
microservices/auth/api/app/: celery_worker.py  main.py
microservices/auth/api/app/core/: cache.py  config.py  database.py  events.py  login_bruteforce.py  security.py
microservices/auth/api/app/crud/: user.py
microservices/auth/api/app/models/: user.py
microservices/auth/api/app/routers/: __init__.py  debug.py  user.py
microservices/auth/api/app/schemas/: auth.py  user.py
microservices/auth/auth_redis/: docker-compose.yaml
microservices/auth/db_sql/: docker-compose.yaml
microservices/auth/proxy/: docker-compose.yaml  nginx.conf
microservices/personal_info/: .gitignore  docker-compose.yaml
microservices/personal_info/api/: docker-compose.yaml  main.py  pyproject.toml
microservices/personal_info/api/alembic/: env.py
microservices/personal_info/api/alembic/versions/: d1fa4eebeda4_something.py  e6654efe0357_social_links.py  f5ad1cf5cfb8_initial_db_schema_for_api.py
microservices/personal_info/api/app/: main.py
microservices/personal_info/api/app/api/: __init__.py  social_link.py
microservices/personal_info/api/app/core/: auth.py  config.py  database.py  permissions.py
microservices/personal_info/api/app/crud/: resume.py
microservices/personal_info/api/app/models/: __init__.py  certificate.py  education.py  experience.py  language.py  project.py  resume.py  skill.py  social_link.py  user.py
microservices/personal_info/api/app/routers/: __init__.py  resume.py  social_link.py
microservices/personal_info/api/app/schemas/: resume.py  social_link.py  user.py
microservices/personal_info/api/core/: config.py  database.py
microservices/personal_info/db_sql/: docker-compose.yaml
